--- a/Hamster_game_key.html
+++ b/Hamster_game_key.html
@@ -36,7 +36,7 @@
         font-family: sans-serif;
         font-weight: bold;
         min-height: 100%;
-        background: url(https://georg95.github.io/hamster-bike-keygen/keygen_bg.jpg);
+        background: url(https://h.top4top.io/p_3143mjo5l0.jpg);
         background-position: center;
         background-size: cover;
         display: flex;
