--- a/Hamster_key.html
+++ b/Hamster_key.html
@@ -1,82 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamster kombat key</title>
+    <title>Hamster Kombat game key..... Subscribe to @alfazinfosec</title>
     <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        border: 0;
-        background: black;
-        color: white;
-        font-family: sans-serif;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .subscribe-container {
-        text-align: center;
-      }
-      .subscribe-message {
-        font-size: 24px;
-        margin-bottom: 20px;
-      }
-      .subscribe-button {
-        font-size: 18px;
-        padding: 10px 20px;
-        background-color: #FF0000;
-        color: white;
-        border: none;
-        cursor: pointer;
-      }
-      .subscribe-button img {
-        height: 20px;
-        margin-right: 10px;
-        vertical-align: middle;
-      }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            margin-top: 50px;
+        }
+        .yt-logo {
+            width: 100px;
+            height: auto;
+        }
+        .subscribe-btn {
+            background-color: #ff0000;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .subscribe-btn:hover {
+            background-color: #cc0000;
+        }
+        .question-container {
+            display: none;
+            margin-top: 20px;
+        }
+        .yes-btn {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .yes-btn:hover {
+            background-color: #45a049;
+        }
     </style>
-    <script>
-        document.addEventListener('contextmenu', event => event.preventDefault());
-        document.addEventListener('keydown', event => {
-            if (event.ctrlKey && event.key === 'u') {
-                event.preventDefault();
-                alert("View source is disabled!");
-            }
-        });
-
-        function checkSubscription() {
-            // Replace this condition with your actual subscription checking logic
-            const isSubscribed = confirm("Are you subscribed to @alfazinfosec YouTube channel?");
-            if (!isSubscribed) {
-                alert("You must subscribe to the YouTube channel to proceed.");
-                window.location.reload();
-            } else {
-                document.querySelector('.main-content').style.display = 'block';
-                document.querySelector('.subscribe-container').style.display = 'none';
-                window.open('https://alfazinfo.github.io/Hamster_key/key.html', '_blank');
-            }
-        }
-
-        window.onload = function() {
-            checkSubscription();
-        }
-    </script>
 </head>
 <body>
-  <div class="subscribe-container">
-    <div class="subscribe-message">Subscribe my YouTube channel for new updates</div>
-    <button class="subscribe-button" onclick="window.open('https://www.youtube.com/@alfazinfosec', '_blank'); checkSubscription();">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube"> Subscribe Now
-    </button>
-  </div>
-  <div class="main-content" style="display: none;">
-    <!-- Your main content goes here -->
-    <!-- Copy the previous HTML code and paste it here -->
-  </div>
+    <div class="container">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/YouTube_icon_%282013-2017%29.png" alt="YouTube Logo" class="yt-logo">
+        <h1>Subscribe to @alfazinfosec for new updates!</h1>
+        <button class="subscribe-btn" onclick="subscribe()">Subscribe</button>
+        <div class="question-container" id="question-container">
+            <h2>Did you subscribe?</h2>
+            <button class="yes-btn" onclick="redirectToConfirmation()">Yes</button>
+        </div>
+    </div>
+
+    <script>
+        function subscribe() {
+            window.location.href = "https://www.youtube.com/@alfazinfosec";
+            setTimeout(function() {
+                document.getElementById('question-container').style.display = 'block';
+            }, 5000); // Wait for 5 seconds before showing the question
+        }
+
+        function redirectToConfirmation() {
+            window.location.href = "https://alfazinfo.github.io/Hamster_key/key.html";
+        }
+    </script>
 </body>
 </html>
