--- a/Hamster_key.html
+++ b/Hamster_key.html
@@ -51,8 +51,8 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/YouTube_icon_%282013-2017%29.png" alt="YouTube Logo" class="yt-logo">
-        <h1>Subscribe to @alfazinfosec for new updates!</h1>
+        <img src="https://j.top4top.io/p_3143o0b4o0.png" alt="YouTube Logo" class="yt-logo">
+        <h1>First subscribe my YouTube channel. Then you will get Hamster kombat game key 100%.. @alfazinfosec for new updates!</h1>
         <button class="subscribe-btn" onclick="subscribe()">Subscribe</button>
         <div class="question-container" id="question-container">
             <h2>Did you subscribe?</h2>
@@ -74,17 +74,29 @@
     </script>
 </body>
 </html>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <title>Hamster Kombat game key</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden; /* Hide scrollbars */
+        }
+        .audio-container {
+            display: none; /* Hide the audio element */
+        }
+    </style>
 </head>
 <body>
-    <audio loop autoplay>
-        <source src="https://h.top4top.io/m_3143b6aqv0.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <div class="audio-container">
+        <audio loop autoplay>
+            <source src="https://h.top4top.io/m_3143b6aqv0.mp3" type="audio/mpeg">
+        </audio>
+    </div>
 </body>
 </html>
