--- a/key.html
+++ b/key.html
@@ -1,5 +1,17 @@
 
 <!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>Please Subscribe my YouTube channel</h1>
+<p>Hamster Kombat Game Key generator. Create by Alfaz Infosec.</p>
+
+</body>
+</html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -25,7 +37,7 @@
         font-family: sans-serif;
         font-weight: bold;
         min-height: 100%;
-        background: url(https://georg95.github.io/hamster-bike-keygen/keygen_bg.jpg);
+        background: url(https://c.top4top.io/p_31434koif0.jpeg);
         background-position: center;
         background-size: cover;
         display: flex;
