--- a/key.html
+++ b/key.html
@@ -1,16 +1,42 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page Title</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 50px;
+        }
+        p {
+            display: inline-block;
+            font-size: 24px;
+            font-weight: bold;
+            animation: colorChange 1s infinite, bounce 1s infinite;
+        }
+        @keyframes colorChange {
+            0% { color: #ff0000; }
+            25% { color: #00ff00; }
+            50% { color: #0000ff; }
+            75% { color: #ffff00; }
+            100% { color: #ff00ff; }
+        }
+        @keyframes bounce {
+            0% { transform: translateY(0); }
+            50% { transform: translateY(-20px); }
+            100% { transform: translateY(0); }
+        }
+    </style>
 </head>
 <body>
-
-<h1>Please Subscribe my YouTube channel</h1>
-<p>Hamster Kombat Game Key generator. Create by Alfaz Infosec.</p>
-
+    <h1>Please Subscribe my YouTube channel</h1>
+    <p>Hamster Kombat Game Key generator. Create by Alfaz Infosec.</p>
 </body>
-</html>
+</html>ওয়ালাইকুম 
 <!DOCTYPE html>
 <html lang="en">
 <head>
