--- a/key.html
+++ b/key.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Title</title>
+    
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,11 +19,13 @@
             animation: colorChange 1s infinite, bounce 1s infinite;
         }
         @keyframes colorChange {
-            0% { color: #ff0000; }
-            25% { color: #00ff00; }
-            50% { color: #0000ff; }
-            75% { color: #ffff00; }
-            100% { color: #ff00ff; }
+            0% { color: #ff0000; } /* Red */
+            16.67% { color: #ff7f00; } /* Orange */
+            33.33% { color: #ffff00; } /* Yellow */
+            50% { color: #00ff00; } /* Green */
+            66.67% { color: #0000ff; } /* Blue */
+            83.33% { color: #4b0082; } /* Indigo */
+            100% { color: #8b00ff; } /* Violet */
         }
         @keyframes bounce {
             0% { transform: translateY(0); }
@@ -33,12 +35,12 @@
     </style>
 </head>
 <body>
-    <h1>Please Subscribe my YouTube channel</h1>
+    <h1>Please Subscribe my YouTube channel @alfazinfosec</h1>
     <p>Hamster Kombat Game Key generator. Create by Alfaz Infosec.</p>
 </body>
 <div class="modal" id="subscriptionModal">
         <div class="modal-content">
-            <p>Have you subscribed to my YouTube channel?</p>
+            <p>Have you subscribed to my YouTube channel? @alfazinfosec</p>
             <button onclick="redirect()">Yes</button>
         </div>
     </div>
